streampark-console/streampark-console-service/src/main/resources/flink-ingress-template.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  labels:
    kubernetesClusterId: ${clusterId}
  namespace: music-flink-native
spec:
  rules:
    - host: ${clusterId}.bigdata2-k8s-gy-prod.netease.com
      http:
        paths:
          - backend:
              serviceName: ${clusterId}-rest
              servicePort: 8081
            path: /
            pathType: ImplementationSpecific
    - host: ${clusterId}.bigdata2-k8s-gy-prod.service.163.org
      http:
        paths:
          - backend:
              serviceName: ${clusterId}-rest
              servicePort: 8081
            path: /
            pathType: ImplementationSpecific
